feat: operationalize click analytics
